--- a/BrunelBankApp/.project
+++ b/BrunelBankApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BrunelBankApp</name>
+	<name>CS3004 CW</name>
 	<comment></comment>
 	<projects>
 	</projects>
